--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header h2 span {
-  color: #A9A9A9;
+  color: #fff;
   border-bottom: 2px solid #18d26e;
   padding-bottom: 6px;
 }
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.1);
-  color: #A9A9A9;
+  color: #fff;
   line-height: 1;
   margin-right: 8px;
   border-radius: 50%;
@@ -184,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #A9A9A9;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle i {
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .mobile-nav {
@@ -234,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-nav a {
   display: block;
   position: relative;
-  color: #A9A9A9	;
+  color: #fff	;
   padding: 10px 20px;
   font-weight: 500;
   outline: none;
@@ -268,7 +268,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-active .mobile-nav-toggle i {
-  color: #A9A9A9;
+  color: #fff;
 }
 
 /* Header Top */
@@ -371,7 +371,7 @@ section .container {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #A9A9A9;
+  color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -433,7 +433,7 @@ section .container {
   font-size: 36px;
   display: block;
   font-weight: 600;
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .counts .count-box p {
@@ -459,7 +459,7 @@ section .container {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .skills .progress .skill .val {
@@ -501,7 +501,7 @@ section .container {
   padding: 0;
   line-height: 1;
   font-size: 16px;
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .interests .icon-box:hover {
@@ -529,7 +529,7 @@ section .container {
   font-size: 18px;
   font-weight: bold;
   margin: 10px 0 5px 45px;
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .testimonials .testimonial-item h4 {
@@ -599,7 +599,7 @@ section .container {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .resume .resume-item {
@@ -677,7 +677,7 @@ section .container {
 }
 
 .services .icon-box .icon i {
-  color: #A9A9A9;
+  color: #fff;
   font-size: 28px;
 }
 
@@ -701,7 +701,7 @@ section .container {
 }
 
 .services .icon-box h4 a {
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .services .icon-box p {
@@ -716,7 +716,7 @@ section .container {
 }
 
 .services .icon-box:hover .icon {
-  background: #A9A9A9	;
+  background: #fff;
 }
 
 .services .icon-box:hover .icon i {
@@ -728,7 +728,7 @@ section .container {
 }
 
 .services .icon-box:hover h4 a, .services .icon-box:hover p {
-  color: #A9A9A9	;
+  color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -755,7 +755,7 @@ section .container {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #A9A9A9;
+  color: #fff;
   background: rgba(255, 255, 255, 0.1);
   margin: 0 3px 10px 3px;
   transition: all 0.3s ease-in-out;
@@ -815,8 +815,8 @@ section .container {
   position: absolute;
   top: 35px;
   left: 35px;
-  border-top: 3px solid #A9A9A9	;
-  border-left: 3px solid #A9A9A9;
+  border-top: 3px solid #fff	;
+  border-left: 3px solid #fff;
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
@@ -829,20 +829,20 @@ section .container {
   position: absolute;
   bottom: 35px;
   right: 35px;
-  border-bottom: 3px solid #A9A9A9	;
-  border-right: 3px solid #A9A9A9	;
+  border-bottom: 3px solid #fff	;
+  border-right: 3px solid #fff	;
   transition: all 0.5s ease 0s;
   z-index: 9994;
 }
 
 .portfolio .portfolio-wrap .portfolio-info h4 {
   font-size: 20px;
-  color: #A9A9A9	;
+  color: #fff	;
   font-weight: 600;
 }
 
 .portfolio .portfolio-wrap .portfolio-info p {
-  color: #A9A9A9;
+  color: #fff;
   font-size: 14px;
   text-transform: uppercase;
   padding: 0;
@@ -855,7 +855,7 @@ section .container {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #A9A9A9;
+  color: #fff;
   margin: 0 2px;
   font-size: 28px;
   display: inline-block;
@@ -916,7 +916,7 @@ section .container {
 
 .contact .info-box p {
   padding: 0;
-  color: #A9A9A9;
+  color: #fff;
   line-height: 24px;
   font-size: 14px;
   margin: 0 0 0 68px;
@@ -930,7 +930,7 @@ section .container {
 .contact .info-box .social-links a {
   font-size: 18px;
   display: inline-block;
-  color: #A9A9A9;
+  color: #fff;
   line-height: 1;
   margin-right: 12px;
   transition: 0.3s;
@@ -1002,7 +1002,7 @@ section .container {
   background: rgba(255, 255, 255, 0.08);
   border: 0;
   transition: 0.3s;
-  color: #A9A9A9;
+  color: #fff;
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
@@ -1046,7 +1046,7 @@ section .container {
   background: #18d26e;
   border: 0;
   padding: 10px 30px;
-  color: #A9A9A9;
+  color: #fff;
   transition: 0.4s;
   border-radius: 4px;
 }
@@ -1158,7 +1158,7 @@ section .container {
   padding: 15px;
   text-align: right;
   font-size: 5px;
-  color: #A9A9A9;
+  color: #fff;
   z-index: 999999;
 }
 
@@ -1171,10 +1171,10 @@ section .container {
 }
 
 .credits a {
-  color: #A9A9A9;
+  color: #fff;
   transition: 0.3s;
 }
 
 .credits a:hover {
-  color: #A9A9A9;
+  color: #fff;
 }
