--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   top: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: #5cb85c;
 }
 
 #header.header-top .social-links, #header.header-top h2 {
